--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -23,8 +23,14 @@ aside p{
   font: 400 1.6rem/1.1 'Nunito', sans-serif;
 }
 
-aside footer{
+aside footer p{
   margin-top: .8rem;
+}
+
+#mapid {
+  width: 100%;
+  height: 100%;
+  animation-delay: 200ms;
 }
 
 /* button */
@@ -33,6 +39,7 @@ a.create-orphanage{
   position: absolute;
   right: 4rem;
   bottom: 4rem;
+  z-index: 10;
 
   width: 6.4rem;
   height: 6.4rem;
@@ -47,4 +54,45 @@ a.create-orphanage{
 
 a.create-orphanage:hover{
   background: #17d6eb;
+}
+
+.leaflet-popup-content-wrapper{
+  background: rgba(255, 255, 255, 0.8);
+  
+  border-radius: 20px;
+}
+
+.leaflet-popup-content{
+  color: #0089a5;
+  margin: .8rem 1.2rem;
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.leaflet-popup-content a{
+  width: 4rem;
+  height: 4rem;
+  background: #15c3d6;
+  box-shadow: 17.2828px 27.65px 41.48 rgba(23, 142, 166, 0.16);
+  border-radius: 12px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 200ms;
+}
+
+.leaflet-popup-content a:hover{
+  background: #17d6eb;
+}
+
+.leaflet-popup-tip{
+  display: none;
+}
+
+.leaflet-container{
+  font: 800 2rem/1 'Nunito', sans-serif;
+  z-index: 5;
 }
