--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -31,7 +31,7 @@
       <h1 class="animate-up">Leve felicidade para o mundo</h1>
       <section class="visit">
         <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
-        <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
+        <a href="/orphanages" title="Visite orfanatos" class="animate-up">
           <img src="/images/arrow.svg" alt="Ir para o mapa">
         </a>
       </section>
