--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -9,10 +9,10 @@
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
-  <link rel="icon" href="./public/images/logo-icon.png">
-  <link rel="stylesheet" href="./public/css/main.css">
-  <link rel="stylesheet" href="./public/css/animations.css">
-  <link rel="stylesheet" href="./public/css/page-orphanages.css">
+  <link rel="icon" href="/images/logo-icon.png">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/animations.css">
+  <link rel="stylesheet" href="/css/page-orphanages.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,800;1,800&display=swap" rel="stylesheet">
 
@@ -22,7 +22,7 @@
   <div id="page-orphanages">
     <aside class="animate-right">
       <header>
-        <img src="./public/images/map-marker.svg" alt="Happy">
+        <img src="/images/map-marker.svg" alt="Happy">
         <h2>Escolha um orfanato no mapa</h2>
         <p>Muitas Crianças estão esperando sua visita :)</p>
       </header>
@@ -34,12 +34,23 @@
     </aside>
     <div id="mapid" class="animate-appear"></div>
 
-    <a href="create-orphanage.html" class="create-orphanage" title="Cadastre um Orfanato">
-      <img src="./public/images/plus.svg" alt="Adicionar orfanato">
+    <div class="orphanages">
+      {{#each orphanages}}
+        <span hidden
+          data-id="{{this.id}}"
+          data-name="{{this.name}}"
+          data-lat="{{this.lat}}"
+          data-lng="{{this.lng}}"
+        ></span>
+      {{/each}}
+    </div>
+
+    <a href="/create-orphanage" class="create-orphanage" title="Cadastre um Orfanato">
+      <img src="/images/plus.svg" alt="Adicionar orfanato">
     </a>
   </div>
 
-  <script src="./public/scripts/page-orphanages.js"></script>
+  <script src="/scripts/page-orphanages.js"></script>
 </body>
 
 </html>
