--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   transition: background-color .2s;
+  text-decoration: none;
 }
 
 .primary-button:hover{
